--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=socialnetwork.db"
+    "DefaultConnection": "Data Source=SocialNetworkAnalyser.db"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
